fixed content spacing

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -183,7 +183,7 @@ a.brand-subtext{
 
 .page-header,
 h1.entry-title{
-  text-align: left;
+  text-align: center;
   padding: 0;
   margin: 0;
   border: 0;
